--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<h1>Hello, HTML.</h1>
+		<code id="viewText"></code>
 		<p>Do not use until Challenge #12</p>
      <form action="/name" method="post">
       <label>First Name :</label>
